--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "nodemon": "^2.0.21",
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http": "^0.0.1-security",
+    "mongoose": "^7.0.2",
     "socket.io": "^4.6.1"
   }
 }
